#10859 [portal] Input Box 디자인 적용 - 기본 레이아웃

--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -670,7 +670,7 @@ input, button, select, optgroup, textarea {
   padding: 8.438rem 0 0.9375rem 0;
 }
 
-/* _elements.scss 
+/* _elements.scss
  *
  * 파일 경로 : template/_elements.scss
  * @description HTML element 디자인
@@ -734,7 +734,7 @@ input {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
@@ -790,7 +790,7 @@ input[type=range]::-webkit-slider-thumb {
   height: 1.125rem;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
-  background: #ffffff;
+  background: #FFFFFF;
   cursor: pointer;
 }
 input[type=range]::-moz-range-thumb {
@@ -798,7 +798,7 @@ input[type=range]::-moz-range-thumb {
   height: 1.125rem;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
-  background: #ffffff;
+  background: #FFFFFF;
   cursor: pointer;
 }
 
@@ -808,7 +808,7 @@ textarea {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
@@ -882,7 +882,7 @@ select {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
@@ -927,7 +927,7 @@ select:disabled {
   bottom: 0;
   left: 0;
   padding: 0.5rem 0.625rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   color: #586872;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
@@ -995,7 +995,7 @@ select:disabled {
   list-style: none;
   max-height: 25rem;
   color: #586872;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   outline: 0;
   border: 0.0625rem solid #EBEBEB;
   overflow: auto;
@@ -1034,7 +1034,7 @@ option:hover {
 }
 option:visited {
   color: #0098FF;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 option:active, option:focus {
   color: #0098FF;
@@ -1076,7 +1076,7 @@ label {
   display: inline-block;
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 50%;
   -webkit-border-radius: 50%;
@@ -1160,7 +1160,7 @@ label {
   display: inline-block;
   width: 1.125rem;
   height: 1.125rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
   -webkit-border-radius: 0.0625rem;
@@ -1253,7 +1253,7 @@ label {
   left: 0.25rem;
   width: 1.563rem;
   height: 1.563rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1293,6 +1293,62 @@ label {
 }
 .input-button button:focus, .input-button button:hover, .input-button button:active {
   z-index: 25;
+}
+
+.z-input {
+  height: 2.25rem;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #212121;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+  padding: 0 0.9375rem;
+  vertical-align: middle;
+}
+.z-input::placeholder {
+  color: #ABB0B5;
+}
+.z-input:not(:disabled):hover, .z-input:not(:read-only):hover {
+  outline: 0;
+  border-color: #64BBF6;
+}
+.z-input:not(:disabled):focus, .z-input:not(:read-only):focus {
+  outline: 0;
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578ce;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578ce;
+  box-shadow: 0 0 0.125rem 0 #2578ce;
+}
+.z-input:not(:disabled):active, .z-input:not(:read-only):active {
+  outline: 0;
+  border: 0.0625rem solid #339AF0;
+}
+.z-input:read-only {
+  border-color: #ABB0B5;
+  border-style: none none none solid;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  pointer-events: none;
+  cursor: default;
+}
+.z-input:disabled {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+  border-color: #CFD5D9;
+  pointer-events: none;
+  cursor: default;
+}
+.z-input.error {
+  border: 0.0625rem solid #F52525;
+}
+.z-input.success {
+  border: 0.0625rem solid #76BD26;
 }
 
 /* _print.scss 
@@ -1340,7 +1396,7 @@ label {
   min-height: 100%;
   margin: 0.9375rem;
   padding: 6.25rem 4.688rem;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
 }
 .print .print-main .drawing-board *:focus {
@@ -1412,7 +1468,7 @@ body.modal-active {
   left: 0;
   width: 34.38rem;
   margin: 0 auto 2em auto;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   border: 0.0625rem solid #EBEBEB;
   -webkit-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
   -moz-box-shadow: 0 0 0.3125rem 0 #EBEBEB;
@@ -1535,20 +1591,20 @@ body.modal-active {
   font-weight: 400;
 }
 .modal-wrapper .modal-dialog.tree .modal-content div li:last-child:before {
-  background-color: #ffffff;
+  background-color: #FFFFFF;
 }
 
 /* form, group, row, component 디자인 - document ver. */
 .z-group-tooltip {
-  border: 0.0625rem solid #ffffff;
+  border: 0.0625rem solid #FFFFFF;
 }
 
 .z-row-tooltip {
-  border: 0.0625rem solid #ffffff;
+  border: 0.0625rem solid #FFFFFF;
 }
 
 .z-component-tooltip {
-  border: 0.0625rem solid #ffffff;
+  border: 0.0625rem solid #FFFFFF;
 }
 
 .z-group.accordion .z-group-accordion-checkBox:checked ~ .z-row-tooltip:not(.off):last-child {
@@ -1988,7 +2044,7 @@ body.modal-active {
   content: "×";
 }
 .tagify__tag__removeBtn:hover {
-  color: #ffffff;
+  color: #FFFFFF;
   background: #0098FF;
 }
 .tagify__tag__removeBtn:hover + div > span {
