문서함 문서 출력 - 버튼 부분 클래스 분리

--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -57,6 +57,7 @@
         // 신청서 모듈 클래스
         window.zDocument = zDocument;
         console.log(zDocument);
+        zDocument.initDocumentModal();
 
         let offsetCount = 0;
         window.addEventListener('load', (e) => {
