--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -17,11 +17,7 @@
             <div class="document-main flex-column align-items-center">
                 <div class="document-main-header flex-row justify-content-between align-items-center">
                     <span class="document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
-                    <div class="btn-list">
-                        <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
-                        <div id="button-panel"></div>
-                        <button type="button" class="default-line" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
-                    </div>
+                    <div id="btn-area"></div>
                 </div>
                 <div class="drawing-board" id="document-panel" data-display="token"></div>
             </div>
@@ -32,12 +28,23 @@
 </body>
 <th:block layout:fragment="script">
     <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
-    <script th:src="@{/assets/js/document/zDocument.js}"></script>
-    <script type="text/javascript">
+    <script type="module">
         /*<![CDATA[*/
+
+        import { zFormToken } from "../../assets/js/document/zFormToken.js";
+        import {zFormButton} from "../../assets/js/document/zFormButton.js";
         let tokenListModal;
         window.onload = function () {
-            aliceForm.init(aliceDocument.initToken, '[[${tokenId}]]');
+            // 아래 URL 은 추후에 '/rest/tokens/' + [[${tokenId}]] + '/data' 로 수정해야 함.
+            aliceJs.fetchJson('/assets/js/document/token_test.json', {
+                method: 'GET'
+            }).then((formData) => {
+                this.formDataJson = formData.form;
+                this.actionDataJson = formData.actions;
+                zFormToken.init(document.getElementById('document-panel'), this.formDataJson);
+                zFormButton.init(document.getElementById('btn-area'), this.actionDataJson);
+            });
+
             OverlayScrollbars(document.querySelectorAll('.list-wrap'), {className: 'scrollbar'});
         };
 
