--- a/src/main/resources/public/scss/formDesigner/_properties.scss
+++ b/src/main/resources/public/scss/formDesigner/_properties.scss
@@ -182,9 +182,30 @@
     }
     .panels {
       .panel {
+        @include relative();
         margin-top: 0.625rem;
         padding: 0.625rem 0.75rem;
         @include border(0.0625rem, solid, map-get($grays, "line"), all); // 1px
+
+        .panel-delete-button {
+          @include absolute($right: 0.625rem); // 10px
+        }
+
+        .btn {
+          padding: 0;
+          .icon-arrow-left {
+            display: inline-block;
+            @include maskImage('#{$icon-folder-path}icon_arrow_left.svg', 1.5rem, 01.5rem, no-repeat, center, null, map-get($grays, "pressed"));
+          }
+          .icon-arrow-right {
+            display: inline-block;
+            @include maskImage('#{$icon-folder-path}icon_arrow_right.svg', 1.5rem, 1.5rem, no-repeat, center, null, map-get($grays, "pressed"));
+          }
+          .icon-delete {
+            display: inline-block;
+            @include maskImage('#{$icon-folder-path}icon_delete.svg', 1.5rem, 1.5rem, no-repeat, center, null, map-get($grays, "pressed"));
+          }
+        }
       }
     }
   }
